Update Commit. It is now possible to make a move in two different directions. Also it's now ready to Download :)